--- a/Bliblioteca 2020/index.html
+++ b/Bliblioteca 2020/index.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <!-- meta tags obrigatorias -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- fim meta tags obrigatorias -->
+
     <!-- bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- fim bootstrap css -->
+
     <!-- fonte -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
+    <!-- fim fonte -->
+
     <!-- estilo css -->
     <!-- <link rel="stylesheet" href="css/reset.css"> -->
     <link rel="stylesheet" href="css/estilo.css">
-    <link rel="stylesheet" href="libs/fontawesome/css/fontawesome.min.css">
-    <link href="libs/fontawesome/css/brands.min.css" rel="stylesheet">
-    <link href="libs/fontawesome/css/all.min.css" rel="stylesheet">
-    <!-- Bradesco -->
+    <!-- fim estilo css -->
+
+    <!-- bradesco -->
     <link rel="stylesheet" href="css/bradseg_icons.css">
+    <!-- fim bradesco -->
+
     <!-- slider / carousel -->
     <link rel="stylesheet" href="css/swiper.min.css">
+    <!-- fim slider / carousel -->
+
+    <!-- slider Owl -->
+    <!-- Documentacao >> https://owlcarousel2.github.io/OwlCarousel2/docs/started-welcome.html -->
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+    <!-- fim slider Owl -->
+
     <title>Biblioteca de componentes</title>
   </head>
   <body>
@@ -30,13 +50,12 @@
             <select class="form-control" name="componentes" id="componentes">
               <option value="">Selecione</option>
               <option value="input-text">Input Text</option>
-              <option value="input-radio">Input Radio</option>
-              <option value="input-checkbox" selected>Input Checkbox</option>
               <option value="login-form">Form para login</option>
               <!-- <option value="slider-carousel">Slider/Carousel não funciona no IE</option> -->
               <option value="slider-carousel-funciona-ie">Slider/Carousel</option>
+              <option value="slider-carousel-por-blocos">Slider/Carousel por blocos</option>
               <option value="accordion-cards">Accordion abrindo um</option>
-              <option value="accordion-cards-multilistas-abertas">Accordion multilistas abertas</option>
+              <option value="accordion-cards-multilistas-abertas" selected>Accordion multilistas abertas</option>
             </select>
           </div>
         </div>
@@ -180,205 +199,6 @@
                     color: $cinza-medio;
                   }
                   // fim input text animado
-                </code>
-              </pre>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="div-sel" id="input-radio">
-        <div class="row">
-          <div class="col-12">
-            <div class="example">
-              <h1>Input Radio</h1>
-              <form>
-                <input type="radio" id="radio1" name="radio" checked>
-                <label for="radio1">radio1</label>
-                <input type="radio" id="radio2" name="radio" >
-                <label for="radio2">radio2</label>
-                <input type="radio" id="radio3" name="radio" >
-                <label for="radio3">radio3</label>
-              </form>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="box">
-              <h2>HTML</h2>
-              <pre>
-                <code class="language-html" data-lang="html">
-                  &lt;form&gt;
-                    &lt;input type=&quot;radio&quot; id=&quot;radio1&quot; name=&quot;radio&quot; checked&gt;
-                    &lt;label for=&quot;radio1&quot;&gt;radio1&lt;/label&gt;
-                    &lt;input type=&quot;radio&quot; id=&quot;radio2&quot; name=&quot;radio&quot; &gt;
-                    &lt;label for=&quot;radio2&quot;&gt;radio2&lt;/label&gt;
-                    &lt;input type=&quot;radio&quot; id=&quot;radio3&quot; name=&quot;radio&quot; &gt;
-                    &lt;label for=&quot;radio3&quot;&gt;radio3&lt;/label&gt;
-                  &lt;/form&gt;
-                </code>
-              </pre>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="box">
-              <h2>CSS</h2>
-              <pre>
-                <code class="language-html" data-lang="html">
-                  // input radio animado
-
-                  input[type=&quot;radio&quot;] + label, input[type=&quot;radio&quot;] + label:after, input[type=&quot;radio&quot;] + label:before {
-                    transition: .3s;
-                  }
-
-                  input[type=&quot;radio&quot;] {
-                    display: none;
-                  }
-                  input[type=&quot;radio&quot;] + label {
-                    position: relative;
-                    display: inline-block;
-                    line-height: 21px;
-                    margin: 10px;
-                    padding-left: 31px;
-                  }
-                  input[type=&quot;radio&quot;] + label:after, input[type=&quot;radio&quot;] + label:before {
-                    content: &#039;&#039;;
-                    display: block;
-                    position: absolute;
-                    width: 23px;
-                    height: 23px;
-                    line-height: 23px;
-                    border-radius: 50%;
-                    background: #fff;
-                    top: 11.5px;
-                    left: 11.5px;
-                    transform: translate(-50%, -50%);
-                  }
-                  input[type=&quot;radio&quot;] + label:after {
-                    z-index: 1;
-                    box-shadow: 0 0 0 1px #ccc inset, 0 0 0 23px #fff inset, 0 0 0 0 #3795f8 inset;
-                  }
-                  input[type=&quot;radio&quot;] + label:before {
-                    z-index: -1;
-                  }
-                  input[type=&quot;radio&quot;]:checked + label:after {
-                    box-shadow: 0 0 0 1px #3795f8 inset, 0 0 0 3px #fff inset, 0 0 0 23px #3795f8 inset;
-                  }
-                  input[type=&quot;radio&quot;]:not(:checked):hover + label {
-                    color: #3795f8;
-                  }
-                  input[type=&quot;radio&quot;]:not(:checked):hover + label:after {
-                    box-shadow: 0 0 0 2px #3795f8 inset, 0 0 0 16px #fff inset, 0 0 0 23px #3795f8 inset;
-                  }
-                  input[type=&quot;radio&quot;]:checked + label:before {
-                    background: #3795f8;
-                    width: 69px;
-                    height: 69px;
-                    opacity: 0;
-                  }
-
-                  // fim input radio animado
-                </code>
-              </pre>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="div-sel" id="input-checkbox">
-        <div class="row">
-          <div class="col-12">
-            <div class="example">
-              <h1>Input Checkbox</h1>
-              <form>
-                <input type="checkbox" id="checkbox1">
-                <label for="checkbox1">checkbox1</label>
-
-                <input type="checkbox" id="checkbox2">
-                <label for="checkbox2">checkbox2</label>
-              </form>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="box">
-              <h2>HTML</h2>
-              <pre>
-                <code class="language-html" data-lang="html">
-                  &lt;form&gt;
-                    &lt;input type=&quot;checkbox&quot; id=&quot;checkbox1&quot;&gt;
-                    &lt;label for=&quot;checkbox1&quot;&gt;checkbox1&lt;/label&gt;
-
-                    &lt;input type=&quot;checkbox&quot; id=&quot;checkbox2&quot;&gt;
-                    &lt;label for=&quot;checkbox2&quot;&gt;checkbox2&lt;/label&gt;
-                  &lt;/form&gt;
-                </code>
-              </pre>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="box">
-              <h2>CSS</h2>
-              <pre>
-                <code class="language-html" data-lang="html">
-                  // input checkbox animado
-
-                  input[type=&quot;checkbox&quot;] {
-                    display: none;
-                  }
-
-                  input[type=&quot;checkbox&quot;] + label {
-                    position: relative;
-                    display: inline-block;
-                    line-height: 21px;
-                    margin: 10px;
-                    padding-left: 31px;
-                  }
-
-                  input[type=&quot;checkbox&quot;] + label:after, input[type=&quot;checkbox&quot;] + label:before {
-                    content: &#039;&#039;;
-                    display: block;
-                    position: absolute;
-                    border-radius: 3px;
-                    width: 23px;
-                    height: 23px;
-                    line-height: 23px;
-                    background: #fff;
-                    top: 11.5px;
-                    left: 11.5px;
-                    transform: translate(-50%, -50%);
-                  }
-
-                  input[type=&quot;checkbox&quot;] + label:after {
-                    z-index: 1;
-                    box-shadow: 0 0 0 1px #ccc inset, 0 0 0 23px #fff inset, 0 0 0 0 #3795f8 inset;
-                  }
-
-                  input[type=&quot;checkbox&quot;] + label:before {
-                    z-index: -1;
-                  }
-
-                  input[type=&quot;checkbox&quot;]:checked + label:after {
-                    font: normal normal normal 13.3333333333px FontAwesome;
-                    content: &quot;\f00c&quot;;
-                    text-align: center;
-                    color: #fff;
-                    line-height: 23px;
-                    box-shadow: 0 0 0 1px #3795f8 inset, 0 0 0 0 #fff inset, 0 0 0 23px #3795f8 inset;
-                  }
-
-                  input[type=&quot;checkbox&quot;]:not(:checked):hover + label {
-                    color: #3795f8;
-                  }
-
-                  input[type=&quot;checkbox&quot;]:not(:checked):hover + label:after {
-                    box-shadow: 0 0 0 2px #3795f8 inset, 0 0 0 16px #fff inset, 0 0 0 23px #3795f8 inset;
-                  }
-
-                  input[type=&quot;checkbox&quot;]:checked + label:before {
-                    background: #3795f8;
-                    width: 69px;
-                    height: 69px;
-                    opacity: 0;
-                  }
-
-                  // fim input checkbox animado
                 </code>
               </pre>
             </div>
@@ -1680,6 +1500,153 @@
           </div>
         </div>
       </section>
+      <section class="div-sel" id="slider-carousel-por-blocos">
+        <div class="row">
+          <div class="col-12">
+            <div class="example">
+              <h1>Slider/Carousel por blocos</h1>
+              <div class="container-fluid">
+                <div class="owl-carousel owl-theme">
+                    <div class="item"><h4>1</h4></div>
+                    <div class="item"><h4>2</h4></div>
+                    <div class="item"><h4>3</h4></div>
+                    <div class="item"><h4>4</h4></div>
+                    <div class="item"><h4>5</h4></div>
+                    <div class="item"><h4>6</h4></div>
+                    <div class="item"><h4>7</h4></div>
+                    <div class="item"><h4>8</h4></div>
+                    <div class="item"><h4>9</h4></div>
+                    <div class="item"><h4>10</h4></div>
+                    <div class="item"><h4>11</h4></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-5">
+            <div class="box">
+              <h2>HTML</h2>
+              <pre>
+                <code class="language-html" data-lang="html">
+                  &lt;div class=&quot;container-fluid&quot;&gt;
+                    &lt;div class=&quot;owl-carousel owl-theme&quot;&gt;
+                      &lt;div class=&quot;item&quot;&gt;&lt;h4&gt;1&lt;/h4&gt;&lt;/div&gt;
+                      &lt;div class=&quot;item&quot;&gt;&lt;h4&gt;2&lt;/h4&gt;&lt;/div&gt;
+                      &lt;div class=&quot;item&quot;&gt;&lt;h4&gt;3&lt;/h4&gt;&lt;/div&gt;
+                      &lt;div class=&quot;item&quot;&gt;&lt;h4&gt;4&lt;/h4&gt;&lt;/div&gt;
+                      &lt;div class=&quot;item&quot;&gt;&lt;h4&gt;5&lt;/h4&gt;&lt;/div&gt;
+                      &lt;div class=&quot;item&quot;&gt;&lt;h4&gt;6&lt;/h4&gt;&lt;/div&gt;
+                      &lt;div class=&quot;item&quot;&gt;&lt;h4&gt;7&lt;/h4&gt;&lt;/div&gt;
+                      &lt;div class=&quot;item&quot;&gt;&lt;h4&gt;8&lt;/h4&gt;&lt;/div&gt;
+                      &lt;div class=&quot;item&quot;&gt;&lt;h4&gt;9&lt;/h4&gt;&lt;/div&gt;
+                      &lt;div class=&quot;item&quot;&gt;&lt;h4&gt;10&lt;/h4&gt;&lt;/div&gt;
+                      &lt;div class=&quot;item&quot;&gt;&lt;h4&gt;11&lt;/h4&gt;&lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                </code>
+              </pre>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="box">
+              <h2>CSS</h2>
+              <h6>Chamar no head do html:</h6>
+              <p>&lt;link rel=&quot;stylesheet&quot; href=&quot;css/bootstrap.min.css&quot;&gt;</p>
+              <p>&lt;link rel=&quot;stylesheet&quot; href=&quot;css/estilo.css&quot;&gt;</p>
+              <p>&lt;!-- slider Owl --&gt;</p>
+              <p>&lt;!-- Documentacao &gt;&gt; https://owlcarousel2.github.io/OwlCarousel2/docs/started-welcome.html --&gt;</p>
+              <p>&lt;link rel=&quot;stylesheet&quot; href=&quot;css/owl.carousel.min.css&quot;&gt;</p>
+              <p>&lt;link rel=&quot;stylesheet&quot; href=&quot;css/owl.theme.default.min.css&quot;&gt;</p>
+              <p>&lt;!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries --&gt;</p>
+              <p>&lt;!--[if lt IE 9]&gt;</p>
+                <p>&lt;script src=&quot;https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js&quot;&gt;&lt;/script&gt;</p>
+                <p>&lt;script src=&quot;https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js&quot;&gt;&lt;/script&gt;</p>
+              <p>&lt;![endif]--&gt;</p>
+              <p>&lt;!-- fim slider Owl --&gt;</p>
+              <pre>
+                <code class="language-css" data-lang="css">
+                  // OWL slider por blocos
+                  .owl-carousel .owl-nav button.owl-prev{
+                    position: absolute;
+                    left: 0;
+                    top: -20px;
+                  }
+
+                  .owl-carousel .owl-nav button.owl-next{
+                    position: absolute;
+                    right: 0;
+                    top: -20px;
+                  }
+
+                  .owl-stage{
+                    padding-top: 13px;
+                  }
+
+                  .owl-carousel .item h4{
+                    text-align: center;
+                  }
+
+                  .owl-theme .owl-nav [class*=owl-]{
+                    font-size: 50px !important;
+                  }
+
+                  .owl-theme .owl-nav [class*=owl-]:hover{
+                    background: transparent !important;
+                    color: #212529 !important;
+                  }
+
+                  // fim OWL slider por blocos
+                </code>
+              </pre>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="box">
+              <h2>JS</h2>
+              <h6>Chamar os scripts no final da página antes do fechamento da tag body:</h6>
+              <p>&lt;script src=&quot;js/jquery-3.3.1.slim.min.js&quot;&gt;&lt;/script&gt;</p>
+              <p>&lt;script src=&quot;js/popper.min.js&quot;&gt;&lt;/script&gt;</p>
+              <p>&lt;script src=&quot;js/bootstrap.min.js&quot;&gt;&lt;/script&gt;</p>
+              <p>&lt;!-- Inicio Owl --&gt;</p>
+              <p>&lt;script src=&quot;js/owl.carousel.js&quot;&gt;&lt;/script&gt;</p>
+              <p>&lt;script src=&quot;js/script.js&quot;&gt;&lt;/script&gt;</p>
+              <pre>
+                <code class="language-JavaScript" data-lang="JavaScript">
+                  // Options do plugins https://owlcarousel2.github.io/OwlCarousel2/docs/api-options.html
+                  $(&#039;.owl-carousel&#039;).owlCarousel({
+                  loop:true,
+                  nav:true,
+                  dots: false,
+                  margin:10,
+                  slideBy: 4,
+                  responsiveClass:true,
+                  responsive:{
+                      0:{
+                        items:1,
+                        nav:true
+                      },
+                      992:{
+                        items:2,
+                        nav:true
+                      },
+                      1000:{
+                        items:3,
+                        nav:true,
+                        loop:false
+                      },
+                      1200:{
+                        items:4,
+                        nav:true,
+                        loop:false
+                      }
+                    }
+                  })
+                </code>
+              </pre>
+              <p>&lt;!-- fim Owl --&gt;</p>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="div-sel" id="accordion-cards">
         <div class="row">
           <div class="col-12">
@@ -2151,17 +2118,32 @@
       </section>
     </div>
 
-
+    <!-- scripts necessarios -->
     <script src="js/jquery-3.3.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <!-- fim scripts necessarios -->
+
+    <!-- combo js da pagina pra carregar componetes -->
     <script src="js/combo.js"></script>
+    <!-- fim combo js da pagina pra carregar componetes -->
+
+    <!-- componente form pra tela de login -->
     <script src="js/login-form.js"></script>
-    <script src="libs/fontawesome/js/all.min.js"></script>
-    <!-- swipper carousel nao funciona IE-->
+    <!-- fim componente form pra tela de login -->
+
+    <!-- swipper carousel nao funciona IE -->
     <script src="js/swiper.min.js"></script>
     <script src="js/config-swiper.js"></script>
-    <!-- Carousel funciona IE -->
+    <!-- fim swipper carousel nao funciona IE -->
+
+    <!-- carousel funciona IE -->
     <script src="js/carousel-funciona-ie.js"></script>
+    <!-- fim carousel funciona IE -->
+
+    <!-- slider Owl -->
+    <script src="js/owl.carousel.js"></script>
+    <script src="js/config-owl-carousel.js"></script>
+    <!-- fim slider Owl -->
   </body>
 </html>
